src/snapshots/tiny_dc__app__tests__renders_correctly_with_help_popup_after_key_event.snap
---
source: src/app.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                 Tiny DC v0.1.4                                 "
"|> /home/user                                                                   "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃>.git/  a                                                                     ┃"
"┃ dir1/  s                                                                     ┃"
"┃ .gitignore                                                                   ┃"
"┃ Cargo.toml        ┌ Help ────────────────────────────────┐                   ┃"
"┃                   │Key Bindings:                         │                   ┃"
"┃                   │                                      │                   ┃"
"┃                   │> j/k or ↓/↑ - Move down/up           │                   ┃"
"┃                   │> gg/G or Home/End - Go to top/bottom │                   ┃"
"┃                   │> Ctrl + d/f - Switch category        │                   ┃"
"┃                   │(d)irectory or (f)recent              │                   ┃"
"┃                   │> Enter, l or → - Go into directory   │                   ┃"
"┃                   │> h or ← - Go up a directory          │                   ┃"
"┃                   │> ? - Toggle help                     │                   ┃"
"┃                   │> q or Esc - Quit                     │                   ┃"
"┃                   └──────────────────────────────────────┘                   ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"Ctrl + (d)irectory │ (f)recent                                  Press ? for help"
