src/snapshots/tiny_dc__app__tests__renders_correctly_with_search_input_after_key_events.snap
---
source: src/app.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                 Tiny DC v0.1.4                                 "
"|> /home/user                                                                   "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃No results found for 'test'                                                   ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" /test                                                                          "
